2021/multitool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: multitool
  name: multitool-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - image: wbitt/network-multitool
        imagePullPolicy: Always
        name: multitool
        securityContext:
          capabilities:
            add: ["NET_ADMIN","NET_RAW"]
      nodeSelector:
        kubernetes.io/os: linux
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - multitool
            topologyKey: kubernetes.io/hostname
