2021/network_policy_podSelector-httpd-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-ipv6-podselector-egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: multitool
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: MyDualApp
    ports:
    - protocol: TCP
      port: 80
