2021/network_policy_podSelector-httpd-ipBlock.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-ipv6
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: MyDualApp
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.42.0.8/30
    ports:
    - protocol: TCP
      port: 80
