2021/network_policy_podSelector-httpd-namespace.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-ipv6
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: MyDualApp
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: testing
    ports:
    - protocol: TCP
      port: 80
