2021/network_policy_podSelector-httpd.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-ipv6-podselector
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: MyDualApp
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: multitool
    ports:
    - protocol: TCP
      port: 80
